conferma o rifiuta presenza
